# Makefile for virt-what
# Copyright (C) 2008-2011 Red Hat Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

CLEANFILES = *~

TESTS = test.sh

EXTRA_DIST = \
	test.sh \
	proc/cpuinfo \
	proc/self/status \
	proc/xen/balloon \
	proc/xen/capabilities \
	proc/xen/privcmd \
	proc/xen/xenbus \
	proc/xen/xsd_kva \
	proc/xen/xsd_port \
	sbin/dmidecode \
	sbin/uname \
	sbin/virt-what-cpuid-helper \
	sys/hypervisor/properties/pagesize \
	sys/hypervisor/properties/changeset \
	sys/hypervisor/properties/virtual_start \
	sys/hypervisor/properties/capabilities \
	sys/hypervisor/properties/writable_pt \
	sys/hypervisor/type \
	sys/hypervisor/vmcoreinfo \
	sys/hypervisor/version/minor \
	sys/hypervisor/version/major \
	sys/hypervisor/version/extra \
	sys/hypervisor/compilation/compiler \
	sys/hypervisor/compilation/compiled_by \
	sys/hypervisor/compilation/compile_date \
	sys/hypervisor/uuid
